--- a/notes/cpp.html
+++ b/notes/cpp.html
@@ -302,7 +302,7 @@
                     <li><a href="cpp/0217.html" class="content" target="_blank"> 88 常用集合算法 - set_intersection.cpp</a></li>
                     <li><a href="cpp/0218.html" class="content" target="_blank"> 89 常用集合算法 - set_union.cpp</a></li>
                     <li><a href="cpp/0219.html" class="content" target="_blank"> 90 常用集合算法 - set_difference.cpp</a></li>
-                    <li><a href="cpp/0220.html" class="content" target="_blank"> MyArray.hpp</a></li>
+                    <li><a href="cpp/0220.html" class="content" target="_blank"> person.h</a></li>
                     <li><a href="cpp/0221.html" class="content" target="_blank"> person.hpp</a></li>
                 </ul>
             </li>
