--- a/notes/python/0002.html
+++ b/notes/python/0002.html
@@ -34,13 +34,23 @@
         </div>
         <hr>
         <!-- 正文 -->
-        <h1 class="code">01 字面量.py</h1>
+        <h1 class="code">02 注释.py</h1>
         <pre>
             <code class="code">
+"""
+本代码演示了：
+- 各类字面量的写法
+- 通过print语句输出各类字面量
+"""
+
+# 写一个整数字面量
 666
+# 写一个浮点数字面量
 13.14
+# 写一个字符串字面量
 "黑马程序员"
 
+# 通过print语句输出各类字面量
 print(666)
 print(13.14)
 print("黑马程序员")
