--- a/notes/python/0005.html
+++ b/notes/python/0005.html
@@ -34,16 +34,33 @@
         </div>
         <hr>
         <!-- 正文 -->
-        <h1 class="code">01 字面量.py</h1>
+        <h1 class="code">05 数据类型转换.py</h1>
         <pre>
             <code class="code">
-666
-13.14
-"黑马程序员"
+# 将数字类型转换为字符串
+num_str = str(11)
+print(type(num_str), num_str)
 
-print(666)
-print(13.14)
-print("黑马程序员")
+float_str = str(11.345)
+print(type(float_str), float_str)
+# 将字符串类型转换为数字
+num = int("11")
+print(type(num), num)
+
+num2 = float("11.345")
+print(type(num2), num2)
+
+# 错误示例，想要将字符串转换成数字，必须要求字符串内的内容都是数字
+# num3 = int("黑马程序员")
+# print(type(num3), num3)
+
+# 整数转浮点数
+float_num = float(11)
+print(type(float_num), float_num)
+
+# 浮点数转整数
+int_num = int(11.345)
+print(type(int_num), int_num)
 
             </code>
         </pre>
