--- a/notes/python/0007.html
+++ b/notes/python/0007.html
@@ -34,16 +34,41 @@
         </div>
         <hr>
         <!-- 正文 -->
-        <h1 class="code">01 字面量.py</h1>
+        <h1 class="code">07 运算符.py</h1>
         <pre>
             <code class="code">
-666
-13.14
-"黑马程序员"
+"""
+演示Python中的各类运算符
+"""
+# 算数(数学)运算符
+print("1 + 1 = ", 1 + 1)
+print("2 - 1 = ", 2 - 1)
+print("3 * 3 = ", 3 * 3)
+print("4 / 2 = ", 4 / 2)
+print("11 // 2 = ", 11 // 2)
+print("9 % 2 = ", 9 & 2)
+print("2 ** 2 = ", 2 ** 2)
+# 赋值运算符
+# +=
+num = 1
+num += 1  # num = num + 1
+print("num += 1: ", num)
+num -= 1
+print("num -= 1:", num)
+num *= 4
+print("num *= 4:", num)
+num /= 2
+print("num /= 2:", num)
+num = 3
+num %= 2
+print("num %= 2:", num)
 
-print(666)
-print(13.14)
-print("黑马程序员")
+num **= 2
+print("num **= 2:", num)
+
+num = 9
+num //= 2
+print("num //= 2:", num)
 
             </code>
         </pre>
