--- a/notes/python/0009.html
+++ b/notes/python/0009.html
@@ -34,16 +34,17 @@
         </div>
         <hr>
         <!-- 正文 -->
-        <h1 class="code">01 字面量.py</h1>
+        <h1 class="code">09 字符串的拼接.py</h1>
         <pre>
             <code class="code">
-666
-13.14
-"黑马程序员"
-
-print(666)
-print(13.14)
-print("黑马程序员")
+# 字符串字面量之间的拼接
+print("学IT来黑马" + "月薪过万")
+# 字符串字面量和字符串变量的拼接
+name = "黑马程序员"
+address = "建材城东路9号院"
+tel = 4006189090
+print("我是: " + name + "，我的地址是: " + address + "，我的电话是:")
+# print("我是: " + name + "，我的地址是: " + address + "，我的电话是:" + tel)  tel不是字符串变量
 
             </code>
         </pre>
