--- a/notes/python/0012.html
+++ b/notes/python/0012.html
@@ -34,16 +34,17 @@
         </div>
         <hr>
         <!-- 正文 -->
-        <h1 class="code">01 字面量.py</h1>
+        <h1 class="code">12 字符串格式化3.py</h1>
         <pre>
             <code class="code">
-666
-13.14
-"黑马程序员"
-
-print(666)
-print(13.14)
-print("黑马程序员")
+"""
+演示第二种字符串格式化的方式: f"{占位}"
+"""
+name = "传智播客"
+set_up_year = 2006
+stock_price = 19.99
+# f: format 格式化
+print(f"我是{name}，我成立于:{set_up_year}年，我今天的股价是:{stock_price}")
 
             </code>
         </pre>
