--- a/notes/python/0013.html
+++ b/notes/python/0013.html
@@ -34,16 +34,15 @@
         </div>
         <hr>
         <!-- 正文 -->
-        <h1 class="code">01 字面量.py</h1>
+        <h1 class="code">13 对表达式进行格式化.py</h1>
         <pre>
             <code class="code">
-666
-13.14
-"黑马程序员"
-
-print(666)
-print(13.14)
-print("黑马程序员")
+"""
+演示对表达式进行字符串格式化
+"""
+print("1 * 1的结果是: %d" % (1 * 1))
+print(f"1 * 2的结果是: {1 * 2}")
+print("字符串在Python中的类型名是: %s" % type("字符串"))
 
             </code>
         </pre>
