--- a/notes/python/0016.html
+++ b/notes/python/0016.html
@@ -34,16 +34,19 @@
         </div>
         <hr>
         <!-- 正文 -->
-        <h1 class="code">01 字面量.py</h1>
+        <h1 class="code">17 if判断语句的基础格式.py</h1>
         <pre>
             <code class="code">
-666
-13.14
-"黑马程序员"
+"""
+演示Python判断语句: if语句的基本格式应用
+"""
+age = 10
 
-print(666)
-print(13.14)
-print("黑马程序员")
+if age &gt;= 18:
+    print("我已经成年了")
+    print("即将步入大学生活")
+
+print("时间过得真快呀")
 
             </code>
         </pre>
