--- a/notes/python/0020.html
+++ b/notes/python/0020.html
@@ -34,16 +34,16 @@
         </div>
         <hr>
         <!-- 正文 -->
-        <h1 class="code">01 字面量.py</h1>
+        <h1 class="code">25 while循环的基础语法.py</h1>
         <pre>
             <code class="code">
-666
-13.14
-"黑马程序员"
-
-print(666)
-print(13.14)
-print("黑马程序员")
+"""
+演示while循环的基础应用
+"""
+i = 0
+while i &lt; 100:
+    print("一句话")
+    i += 1
 
             </code>
         </pre>
