--- a/notes/python/0024.html
+++ b/notes/python/0024.html
@@ -34,16 +34,17 @@
         </div>
         <hr>
         <!-- 正文 -->
-        <h1 class="code">01 字面量.py</h1>
+        <h1 class="code">33 变量作用域.py</h1>
         <pre>
             <code class="code">
-666
-13.14
-"黑马程序员"
+"""
+演示Python for循环临时变量的作用域
+"""
+i = 0
+for i in range(5):
+    print(i)
 
-print(666)
-print(13.14)
-print("黑马程序员")
+print(i)
 
             </code>
         </pre>
