--- a/notes/python/0069.html
+++ b/notes/python/0069.html
@@ -34,16 +34,34 @@
         </div>
         <hr>
         <!-- 正文 -->
-        <h1 class="code">01 字面量.py</h1>
+        <h1 class="code">03 类和对象.py</h1>
         <pre>
             <code class="code">
-666
-13.14
-"黑马程序员"
+"""
+演示类和对象的关系，即面向对象的编程套路(思想)
+"""
 
-print(666)
-print(13.14)
-print("黑马程序员")
+# 设计一个闹钟类
+class Clock:
+    id = None       # 序列化
+    price = None    # 价格
+
+    def ring(self):
+        import winsound
+        winsound.Beep(2000, 3000)
+
+# 构建2个闹钟对象并让其工作
+clock1 = Clock()
+clock1.id = "003032"
+clock1.price = 19.19
+print(f"闹钟ID：{clock1.id}，价格：{clock1.price}")
+clock1.ring()
+
+clock2 = Clock()
+clock2.id = "003033"
+clock2.price = 21.99
+print(f"闹钟ID：{clock2.id}，价格：{clock2.price}")
+clock2.ring()
 
             </code>
         </pre>
