--- a/notes/python/0073.html
+++ b/notes/python/0073.html
@@ -34,16 +34,64 @@
         </div>
         <hr>
         <!-- 正文 -->
-        <h1 class="code">01 字面量.py</h1>
+        <h1 class="code">08 继承的基本语法.py</h1>
         <pre>
             <code class="code">
-666
-13.14
-"黑马程序员"
+"""
+演示面向对象：继承的基本语法
+"""
 
-print(666)
-print(13.14)
-print("黑马程序员")
+# 演示单继承
+class Phone:
+    IMEI = None     # 序列号
+    producer = "ITCAST"  # 厂商
+
+    def call_by_4g(self):
+        print("4g通话")
+
+
+class Phone2022(Phone):  # 利用(基类)实现继承
+    face_id = "10001"       # 面部识别ID
+
+    def call_by_5g(self):
+        print("2022年新功能：5g通话")
+
+
+phone = Phone2022()
+print(phone.producer)
+phone.call_by_4g()
+phone.call_by_5g()
+# 演示多继承
+class NFCReader:
+    nfc_type = "第五代"
+    producer = "HM"
+
+    def read_card(self):
+        print("NFC读卡")
+
+    def write_card(self):
+        print("NFC写卡")
+
+
+class RemoteControl:
+    rc_type = "红外遥控"
+
+    def control(self):
+        print("红外遥控开启了")
+
+
+class MyPhone(Phone, NFCReader, RemoteControl):  # 同名的成员以左边的基类成员优先
+    pass  # 如果不想写东西，可以用pass补全
+
+
+phone = MyPhone()
+phone.call_by_4g()
+phone.read_card()
+phone.write_card()
+phone.control()
+
+# 演示多继承下，父类成员名一致的场景
+print(phone.producer)
 
             </code>
         </pre>
