--- a/notes/python/0004.html
+++ b/notes/python/0004.html
@@ -34,16 +34,24 @@
         </div>
         <hr>
         <!-- 正文 -->
-        <h1 class="code">01 字面量.py</h1>
+        <h1 class="code">04 数据类型.py</h1>
         <pre>
             <code class="code">
-666
-13.14
-"黑马程序员"
-
-print(666)
-print(13.14)
-print("黑马程序员")
+# 方式1：使用print直接输出类型信息
+print(type("黑马程序员"))
+print(type(666))
+print(type(11.345))
+# 方式2：使用变量存储type()语句的结果
+string_type = type("黑马程序员")
+int_type = type(666)
+float_type = type(11.345)
+print(string_type)
+print(int_type)
+print(float_type)
+# 方式3：使用type()语句，查看变量中存储的数据类型信息
+name = "黑马程序员"
+name_type = type(name)
+print(name_type)
 
             </code>
         </pre>
