--- a/notes/python/0008.html
+++ b/notes/python/0008.html
@@ -34,16 +34,42 @@
         </div>
         <hr>
         <!-- 正文 -->
-        <h1 class="code">01 字面量.py</h1>
+        <h1 class="code">08 字符串的多种定义方式.py</h1>
         <pre>
             <code class="code">
-666
-13.14
-"黑马程序员"
+"""
+演示字符串的三种定义方式:
+- 单引号定义法
+- 双引号定义法
+- 三引号定义法
+"""
 
-print(666)
-print(13.14)
-print("黑马程序员")
+# 单引号定义法，使用单引号进行包围
+name = '黑马程序员'
+print(type(name))
+# 双引号定义法
+name = "黑马程序员"
+print(type(name))
+# 三引号定义法，写法和多行注释是一样的
+name = """
+我是
+黑马
+程序员
+"""
+print(type(name))
+
+
+# 在字符串内 包含双引号
+name = '"黑马程序员"'
+print(name)
+# 在字符串内 包含单引号
+name = "'黑马程序员'"
+print(name)
+# 使用转义字符 \ 解除引号的效用
+name = "\"黑马程序员\""
+print(name)
+name = '\'黑马程序员\''
+print(name)
 
             </code>
         </pre>
