--- a/notes/python/0011.html
+++ b/notes/python/0011.html
@@ -34,16 +34,15 @@
         </div>
         <hr>
         <!-- 正文 -->
-        <h1 class="code">01 字面量.py</h1>
+        <h1 class="code">11 字符串格式化2.py</h1>
         <pre>
             <code class="code">
-666
-13.14
-"黑马程序员"
-
-print(666)
-print(13.14)
-print("黑马程序员")
+num1 = 11
+num2 = 11.345
+print("数字11宽度限制5，结果是: %5d" % num1)
+print("数字11宽度显示1，结果是: %1d" % num1)
+print("数字11.345宽度限制7，小数精度2，结果是: %7.2f" % num2)
+print("数字11.345宽度不限制，小数精度2，结果是: %.2f" % num2)
 
             </code>
         </pre>
