--- a/notes/python/0014.html
+++ b/notes/python/0014.html
@@ -34,16 +34,22 @@
         </div>
         <hr>
         <!-- 正文 -->
-        <h1 class="code">01 字面量.py</h1>
+        <h1 class="code">15 input语句.py</h1>
         <pre>
             <code class="code">
-666
-13.14
-"黑马程序员"
+"""
+演示Python的input语句
+获取键盘的输入信息
+"""
+# print("请告诉我你是谁？")
+name = input("请告诉我你是谁？")
+print("我知道了，你是:%s" % name)
 
-print(666)
-print(13.14)
-print("黑马程序员")
+# 输入数字类型
+num = input("请告诉我你的银行卡密码: ")
+# 数据类型转换
+num = int(num)
+print("你的银行卡密码的类型是:", type(num))
 
             </code>
         </pre>
