--- a/notes/python/0017.html
+++ b/notes/python/0017.html
@@ -34,16 +34,19 @@
         </div>
         <hr>
         <!-- 正文 -->
-        <h1 class="code">01 字面量.py</h1>
+        <h1 class="code">19 if else语句的使用.py</h1>
         <pre>
             <code class="code">
-666
-13.14
-"黑马程序员"
+"""
+演示Python中
+if else的组合判断语句
+"""
+age = int(input("请输入你的年龄:"))
 
-print(666)
-print(13.14)
-print("黑马程序员")
+if age &gt;= 18:
+    print("您已成年，需要买票10元。")
+else:
+    print("您未成年，可以免费游玩。")
 
             </code>
         </pre>
