--- a/notes/python/0021.html
+++ b/notes/python/0021.html
@@ -34,16 +34,30 @@
         </div>
         <hr>
         <!-- 正文 -->
-        <h1 class="code">01 字面量.py</h1>
+        <h1 class="code">28 while循环的嵌套使用.py</h1>
         <pre>
             <code class="code">
-666
-13.14
-"黑马程序员"
+"""
+演示while循环的嵌套使用
+"""
 
-print(666)
-print(13.14)
-print("黑马程序员")
+# 外层：表白100天的控制
+# 内层：每天的表白都送10只玫瑰花的控制
+
+i = 1
+while i &lt;= 100:
+    print(f"今天是第{i}天，准备表白.....")
+
+    # 内层循环的控制变量
+    j = 1
+    while j &lt;= 10:
+        print(f"送给小美第{j}只玫瑰花")
+        j += 1
+
+    print("表白...")
+    i += 1
+
+print(f"坚持到第{i - 1}天，表白成功")
 
             </code>
         </pre>
