--- a/notes/python/0022.html
+++ b/notes/python/0022.html
@@ -34,16 +34,19 @@
         </div>
         <hr>
         <!-- 正文 -->
-        <h1 class="code">01 字面量.py</h1>
+        <h1 class="code">30 for循环的基础语法.py</h1>
         <pre>
             <code class="code">
-666
-13.14
-"黑马程序员"
+"""
+演示for循环的基础语法
+"""
 
-print(666)
-print(13.14)
-print("黑马程序员")
+name = "itheima"
+
+for x in name:
+    # 将name的内容，挨个取出赋予x临时变量
+    # 就可以在循环体内对x进行处理
+    print(x)
 
             </code>
         </pre>
