--- a/notes/python/0023.html
+++ b/notes/python/0023.html
@@ -34,16 +34,31 @@
         </div>
         <hr>
         <!-- 正文 -->
-        <h1 class="code">01 字面量.py</h1>
+        <h1 class="code">32 range语句.py</h1>
         <pre>
             <code class="code">
-666
-13.14
-"黑马程序员"
+"""
+演示Python中的range()语句的基本使用
+"""
 
-print(666)
-print(13.14)
-print("黑马程序员")
+# range()返回一个序列，for循环可以遍历序列
+
+# range语法1 range(num)
+# for x in range(10):
+#     print(x)
+#
+# range 语法2 range(num1, num2)
+# for x in range(5, 10):
+#     # 从5开始，到10结束(不包含10本身)的一个数字序列
+#     print(x)
+#
+# range语法3 range(num1, num2, step)
+# for x in range(5, 10, 2):
+#     # 从5开始，到10结束(不包含10本身)的一个数字序列，数字之间的间隔是2
+#     print(x)
+
+for x in range(10):
+    print("送玫瑰花")
 
             </code>
         </pre>
