--- a/notes/python/0026.html
+++ b/notes/python/0026.html
@@ -34,16 +34,21 @@
         </div>
         <hr>
         <!-- 正文 -->
-        <h1 class="code">01 字面量.py</h1>
+        <h1 class="code">35 for循环打印九九乘法表.py</h1>
         <pre>
             <code class="code">
-666
-13.14
-"黑马程序员"
+"""
+演示for循环打印九九乘法表
+"""
 
-print(666)
-print(13.14)
-print("黑马程序员")
+# 通过外层循环控制行数
+for i in range(1, 10):
+    # 通过内层循环控制每一行的数据
+    for j in range(1, i + 1):
+        # 在内层循环中输出每一行的循环
+        print(f"{j} * {i} = {j * i}\t", end="")
+    # 外层循环可以通过print输出一个回车符
+    print()
 
             </code>
         </pre>
