--- a/notes/python/0027.html
+++ b/notes/python/0027.html
@@ -34,16 +34,44 @@
         </div>
         <hr>
         <!-- 正文 -->
-        <h1 class="code">01 字面量.py</h1>
+        <h1 class="code">36 循环中断.py</h1>
         <pre>
             <code class="code">
-666
-13.14
-"黑马程序员"
+"""
+演示循环语句的中断控制：break和continue
+"""
 
-print(666)
-print(13.14)
-print("黑马程序员")
+# 演示循环中断语句 continue
+# for i in range(1, 6):
+#     print("语句1")
+#     continue
+#     print("语句2")
+
+# 演示continue的嵌套使用
+# for i in range(1, 6):
+#     print("语句1")
+#     for j in range(1, 6):
+#         print("语句2")
+#         continue
+#         print("语句3")
+#     print("语句4")
+
+# 演示循环中断语句 break
+# for i in range(1, 101):
+#     print("语句1")
+#     break
+#     print("语句2")
+#
+# print("语句3")
+
+# 演示break的嵌套使用
+for i in range(1, 6):
+    print("语句1")
+    for j in range(1, 6):
+        print("语句2")
+        break
+        print("语句3")
+    print("语句4")
 
             </code>
         </pre>
