--- a/notes/python/0029.html
+++ b/notes/python/0029.html
@@ -34,16 +34,19 @@
         </div>
         <hr>
         <!-- 正文 -->
-        <h1 class="code">01 字面量.py</h1>
+        <h1 class="code">39 函数定义.py</h1>
         <pre>
             <code class="code">
-666
-13.14
-"黑马程序员"
+"""
+演示函数的定义语法
+"""
 
-print(666)
-print(13.14)
-print("黑马程序员")
+# 定义一个函数，输出相关信息
+def say_hi():
+    print("Hi，你个傻子")
+
+# 调用函数，让定义的函数开始工作
+say_hi()
 
             </code>
         </pre>
