--- a/notes/python/0030.html
+++ b/notes/python/0030.html
@@ -34,16 +34,20 @@
         </div>
         <hr>
         <!-- 正文 -->
-        <h1 class="code">01 字面量.py</h1>
+        <h1 class="code">41 函数的参数.py</h1>
         <pre>
             <code class="code">
-666
-13.14
-"黑马程序员"
+"""
+演示函数使用参数
+"""
 
-print(666)
-print(13.14)
-print("黑马程序员")
+# 定义2数相加的函数，通过参数接收被计算的2个数字
+def add(x, y, z):
+    result = x + y + z
+    print(f"{x} + {y} + {z}的计算结果是：{result}")
+
+# 调用函数，传入被计算的2个数字
+add(5, 6, 7)
 
             </code>
         </pre>
