--- a/notes/python/0031.html
+++ b/notes/python/0031.html
@@ -34,16 +34,22 @@
         </div>
         <hr>
         <!-- 正文 -->
-        <h1 class="code">01 字面量.py</h1>
+        <h1 class="code">43 函数的返回值定义语法.py</h1>
         <pre>
             <code class="code">
-666
-13.14
-"黑马程序员"
+"""
+演示：定义函数返回值的语法格式
+"""
 
-print(666)
-print(13.14)
-print("黑马程序员")
+# 定义一个函数，完成2数相加功能
+def add(a, b):
+    result = a + b
+    # 通过返回值，将相加的结果返回给调用者
+    return result
+
+# 函数的返回值，可以通过变量去接收
+r = add(5, 6)
+print(r)
 
             </code>
         </pre>
