--- a/notes/python/0032.html
+++ b/notes/python/0032.html
@@ -34,16 +34,43 @@
         </div>
         <hr>
         <!-- 正文 -->
-        <h1 class="code">01 字面量.py</h1>
+        <h1 class="code">44 None.py</h1>
         <pre>
             <code class="code">
-666
-13.14
-"黑马程序员"
+"""
+演示特殊字面量：None
+"""
 
-print(666)
-print(13.14)
-print("黑马程序员")
+# 无return语句的函数返回值
+def say_hi():
+    print("你有病")
+
+result = say_hi()
+print(f"无返回值函数，返回的内容是：{result}")
+print(f"无返回值函数，返回内容的类型是：{type(result)}")
+
+# 主动返回None的函数
+def say_hi2():
+    print("你好")
+    return None
+
+result = say_hi2()
+print(f"无返回值函数，返回的内容是：{result}")
+print(f"无返回值函数，返回内容的类型是：{type(result)}")
+# None用于if判断
+def check_age(age):
+    if age &gt; 18:
+        return "SUCCESS"
+    else:
+        return None
+
+result = check_age(16)
+if not result:
+    # 进入if表示result是None值 也就是False
+    print("你滚，不能来")
+
+# None用于声明无初始内容的变量
+name = None
 
             </code>
         </pre>
