--- a/notes/python/0033.html
+++ b/notes/python/0033.html
@@ -34,17 +34,26 @@
         </div>
         <hr>
         <!-- 正文 -->
-        <h1 class="code">01 字面量.py</h1>
+        <h1 class="code">45 函数的说明文档.py</h1>
         <pre>
             <code class="code">
-666
-13.14
-"黑马程序员"
+"""
+演示对函数进行文档说明
+"""
 
-print(666)
-print(13.14)
-print("黑马程序员")
+# 定义函数，进行文档说明
+def add(x, y):
+    """
+    add函数可以接收2个参数，进行2数相加的功能
+    :param x: 形参x表示相加的其中一个数字
+    :param y: 形参x表示相加的另一个数字
+    :return: 返回值是2数相加的结果
+    """
+    result = x + y
+    print(f"2数相加的结果是：{result}")
+    return result
 
+add(5, 6)
             </code>
         </pre>
     </body>
