--- a/notes/python/0034.html
+++ b/notes/python/0034.html
@@ -34,16 +34,26 @@
         </div>
         <hr>
         <!-- 正文 -->
-        <h1 class="code">01 字面量.py</h1>
+        <h1 class="code">46 函数的嵌套使用.py</h1>
         <pre>
             <code class="code">
-666
-13.14
-"黑马程序员"
+"""
+演示嵌套函数使用
+"""
 
-print(666)
-print(13.14)
-print("黑马程序员")
+# 定义函数func_b
+def func_b():
+    print("---2---")
+# 定义函数func_a，并在内部调用func_b
+def func_a():
+    print("---1---")
+
+    # 嵌套调用func_b
+    func_b()
+
+    print("---3---")
+# 调用函数func_a
+func_a()
 
             </code>
         </pre>
