--- a/notes/python/0044.html
+++ b/notes/python/0044.html
@@ -34,16 +34,46 @@
         </div>
         <hr>
         <!-- 正文 -->
-        <h1 class="code">01 字面量.py</h1>
+        <h1 class="code">61 字典的常用操作.py</h1>
         <pre>
             <code class="code">
-666
-13.14
-"黑马程序员"
+"""
+演示字典的常用操作
+"""
+my_dict = {"张三": 99, "李四": 88, "王五": 77}
+# 新增元素
+my_dict["赵六"] = 66
+print(f"字典经过新增元素后，结果是：{my_dict}")
+# 更新元素
+my_dict["张三"] = 33
+print(f"字典经过更新后，结果是：{my_dict}")
+# 删除元素  返回的是值
+score = my_dict.pop("张三")
+print(f"字典中被移除了一个元素，结果：{my_dict}，张三的考试分数是：{score}")
 
-print(666)
-print(13.14)
-print("黑马程序员")
+# 清空元素
+my_dict.clear()
+print(f"字典被清空了，内容是：{my_dict}")
+
+# 获取全部的key
+my_dict = {"张三": 99, "李四": 88, "王五": 77}
+keys = my_dict.keys()
+print(f"字典的全部keys是：{keys}")  # type(keys): &lt;class 'dict_keys'&gt;
+
+# 遍历字典
+# 方式1：通过获取到全部的key来完成遍历
+for key in keys:
+    print(f"1字典的key是：{key}")
+    print(f"1字典的value是：{my_dict[key]}")
+
+# 方式2：直接对字典进行for循环，每一次循环都是直接得到key
+for key in my_dict:
+    print(f"2字典的key是：{key}")
+    print(f"2字典的value是：{my_dict[key]}")
+
+# 统计字典内的元素数量，len()函数
+num = len(my_dict)
+print(f"字典中的元素数量有：{num}个")
 
             </code>
         </pre>
