--- a/notes/python/0046.html
+++ b/notes/python/0046.html
@@ -34,16 +34,21 @@
         </div>
         <hr>
         <!-- 正文 -->
-        <h1 class="code">01 字面量.py</h1>
+        <h1 class="code">64 字符串大小比较.py</h1>
         <pre>
             <code class="code">
-666
-13.14
-"黑马程序员"
+"""
+演示字符串大小比较
+"""
 
-print(666)
-print(13.14)
-print("黑马程序员")
+# abc 比较 abd
+print(f"abd大于abc，结果：{'abd' &gt; 'abc'}")
+# a 比较 ab
+print(f"ab大于a，结果：{'ab' &gt; 'a'}")
+# a 比较 A
+print(f"a大于A，结果：{'a' &gt; 'A'}")
+# key1 比较 key2
+print(f"key2大于key1，结果：{'key2' &gt; 'key1'}")
 
             </code>
         </pre>
