--- a/notes/python/0051.html
+++ b/notes/python/0051.html
@@ -34,16 +34,42 @@
         </div>
         <hr>
         <!-- 正文 -->
-        <h1 class="code">01 字面量.py</h1>
+        <h1 class="code">69 文件的读取.py</h1>
         <pre>
             <code class="code">
-666
-13.14
-"黑马程序员"
+"""
+演示对文件的读取
+"""
 
-print(666)
-print(13.14)
-print("黑马程序员")
+# 打开文件
+f = open("E:/桌面/账号文件.txt", "r", encoding="UTF-8")
+print(type(f))
+# 读取文件 - read()  从上次读完的地方继续读
+# print(f"读取10个字节的结果：{f.read(10)}")
+# print(f"read方法读取全部内容的结果：{f.read()}")
+# 读取文件 - readline()
+# lines = f.readlines()  # 读取文件的全部行，封装到列表中
+# readline()是只读一行
+# print(f"lines对象的类型：{type(lines)}")
+# print(f"lines对象的内容：{lines}")
+
+# for循环读取文件行
+line1 = f.readline()
+line2 = f.readline()
+line3 = f.readline()
+print(f"第一行数据是：{line1}")
+print(f"第二行数据是：{line2}")
+print(f"第三行数据是：{line3}")
+
+for line in f:
+    print(f"每一行数据是：{line}")
+# 文件的关闭
+f.close()
+
+# with open 语法操作文件
+with open("E:/桌面/账号文件.txt", "r", encoding="UTF-8") as f:
+    for line in f:
+        print(f"每一行数据是：{line}")
 
             </code>
         </pre>
