--- a/notes/python/0053.html
+++ b/notes/python/0053.html
@@ -34,16 +34,33 @@
         </div>
         <hr>
         <!-- 正文 -->
-        <h1 class="code">01 字面量.py</h1>
+        <h1 class="code">71 文件的追加写入.py</h1>
         <pre>
             <code class="code">
-666
-13.14
-"黑马程序员"
+"""
+演示文件的追加写入
+"""
 
-print(666)
-print(13.14)
-print("黑马程序员")
+# 打开文件，不存在的文件
+f = open("test.txt", "a", encoding="UTF-8")
+
+# write写入
+f.write("黑马程序员")
+
+# flush刷新
+f.flush()
+
+# close关闭
+f.close()
+
+# 打开一个存在的文件
+f = open("test.txt", "a", encoding="UTF-8")
+
+# write写入，flush刷新
+f.write("学Python最佳选择")
+
+# close关闭
+f.close()
 
             </code>
         </pre>
