--- a/notes/python/0054.html
+++ b/notes/python/0054.html
@@ -34,16 +34,47 @@
         </div>
         <hr>
         <!-- 正文 -->
-        <h1 class="code">01 字面量.py</h1>
+        <h1 class="code">73 异常的捕获.py</h1>
         <pre>
             <code class="code">
-666
-13.14
-"黑马程序员"
+"""
+演示捕获异常
+"""
 
-print(666)
-print(13.14)
-print("黑马程序员")
+# try里别留空
+
+# 基本捕获语法
+try:
+    f = open("ABC.txt", "r", encoding="UTF-8")
+except:
+    print("出现异常了，因为文件不存在，我将改为w模式去打开")
+    f = open("ABC.txt", "w", encoding="UTF-8")
+
+# 捕获指定的异常
+try:
+    print(name)
+except NameError as e:
+    print("出现了变量未定义的异常")
+    print(e)
+
+# 捕获多个异常
+try:
+    # 1 / 0
+    print(name)
+except (NameError, ZeroDivisionError) as e:
+    print("出现了变量未定义 或者 除以0的异常")
+
+# 未正确设置捕获异常类型，将无法捕获异常
+
+# 捕获所有异常
+try:
+    print("hello")
+except Exception as e:
+    print("出现异常了")
+else:
+    print("没有异常")
+finally:
+    print("我是finally，有没有异常都会执行")
 
             </code>
         </pre>
