--- a/notes/python/0055.html
+++ b/notes/python/0055.html
@@ -34,16 +34,34 @@
         </div>
         <hr>
         <!-- 正文 -->
-        <h1 class="code">01 字面量.py</h1>
+        <h1 class="code">74 异常的传递.py</h1>
         <pre>
             <code class="code">
-666
-13.14
-"黑马程序员"
+"""
+演示异常的传递性
+"""
 
-print(666)
-print(13.14)
-print("黑马程序员")
+# 定义一个出现异常的方法
+def func1():
+    print("func1 开始执行")
+    num = 1 / 0
+    print("func1 结束执行")
+
+# 定义一个无异常的方法，调用上面的方法
+def func2():
+    print("func2 开始执行")
+    func1()
+    print("func2 结束执行")
+
+# 定义一个方法，调用上面的方法
+
+def main():
+    try:
+        func2()
+    except Exception as e:
+        print(f"出现异常了，异常的信息是：{e}")
+
+main()
 
             </code>
         </pre>
