--- a/notes/python/0059.html
+++ b/notes/python/0059.html
@@ -34,16 +34,36 @@
         </div>
         <hr>
         <!-- 正文 -->
-        <h1 class="code">01 字面量.py</h1>
+        <h1 class="code">79 json数据格式.py</h1>
         <pre>
             <code class="code">
-666
-13.14
-"黑马程序员"
+"""
+演示json数据和Python字典的相互转换
+"""
+import json
+# 准备列表，列表内每一个元素都是字典，将其转换为json
+data = [{"name": "姓名1", "age": 11}, {"name": "姓名2", "age": 13}, {"name": "姓名3", "age": 16}]
+json_str = json.dumps(data, ensure_ascii=False)
+print(type(json_str))
+print(json_str)
 
-print(666)
-print(13.14)
-print("黑马程序员")
+# 准备字典，将字典转换为json
+d = {"name": "张三", "addr": "台湾"}
+json_str = json.dumps(d, ensure_ascii=False)
+print(type(json_str))
+print(json_str)
+
+# 将json字符串转换为Python数据类型[{k: v, k: v}, {k: v, k: v}]
+s = '[{"name": "姓名1", "age": 11}, {"name": "姓名2", "age": 13}, {"name": "姓名3", "age": 16}]'
+l = json.loads(s)
+print(type(l))
+print(l)
+
+# 将json字符串转换为Python数据类型{k: v, k: v}
+s = '{"name": "张三", "addr": "台湾"}'
+d = json.loads(s)
+print(type(d))
+print(d)
 
             </code>
         </pre>
