--- a/notes/python/0061.html
+++ b/notes/python/0061.html
@@ -34,16 +34,44 @@
         </div>
         <hr>
         <!-- 正文 -->
-        <h1 class="code">01 字面量.py</h1>
+        <h1 class="code">81 地图可视化的基本使用.py</h1>
         <pre>
             <code class="code">
-666
-13.14
-"黑马程序员"
+"""
+演示地图可视化的基本使用
+"""
+from pyecharts.charts import Map
+from pyecharts.options import VisualMapOpts
+# 准保地图对象
+map = Map()
 
-print(666)
-print(13.14)
-print("黑马程序员")
+# 准备数据
+data = [
+    ("北京", 99),
+    ("上海", 199),
+    ("湖南", 299),
+    ("台湾", 399),
+    ("广东", 499)
+]
+
+# 添加数据
+map.add("测试地图", data, "china")
+
+# 设置全局选项
+map.set_global_opts(
+    visualmap_opts=VisualMapOpts(
+        is_show=True,
+        is_piecewise=True,
+        pieces=[
+            {"min": 1, "max": 9, "label": "1-9", "color": "#CCFFFF"},
+            {"min": 10, "max": 99, "label": "10-99", "color": "#CC6666"},
+            {"min": 100, "max": 500, "label": "100-500", "color": "#990033"}
+        ]
+    )
+)
+
+# 绘图
+map.render()
 
             </code>
         </pre>
