--- a/notes/python/0063.html
+++ b/notes/python/0063.html
@@ -34,16 +34,31 @@
         </div>
         <hr>
         <!-- 正文 -->
-        <h1 class="code">01 字面量.py</h1>
+        <h1 class="code">83 基础柱状图开发.py</h1>
         <pre>
             <code class="code">
-666
-13.14
-"黑马程序员"
+"""
+演示基础柱状图的开发
+"""
+from pyecharts.charts import Bar
+from pyecharts.options import LabelOpts
+# 使用Bar构建基础柱状图
+bar = Bar()
 
-print(666)
-print(13.14)
-print("黑马程序员")
+# 添加x轴数据
+bar.add_xaxis(["中国", "美国", "英国"])
+
+# 添加y轴数据
+bar.add_yaxis("GDP", [30, 20, 10], label_opts=LabelOpts(position="right"))
+
+# 反转x轴和y轴
+bar.reversal_axis()
+
+# 绘图
+bar.render()
+
+# 设置数值标签在右侧
+# label_opts=LabelOpts(position="right") 上方函数的参数
 
             </code>
         </pre>
