--- a/notes/python/0064.html
+++ b/notes/python/0064.html
@@ -34,16 +34,54 @@
         </div>
         <hr>
         <!-- 正文 -->
-        <h1 class="code">01 字面量.py</h1>
+        <h1 class="code">84 基础时间线柱状图开发.py</h1>
         <pre>
             <code class="code">
-666
-13.14
-"黑马程序员"
+"""
+演示带有时间线的柱状图开发
+"""
+from pyecharts.charts import Bar, Timeline
+from pyecharts.options import LabelOpts
+from pyecharts.globals import ThemeType
 
-print(666)
-print(13.14)
-print("黑马程序员")
+bar1 = Bar()
+bar1.add_xaxis(["中国", "美国", "英国"])
+bar1.add_yaxis("GDP", [30, 30, 20], label_opts=LabelOpts(position="right"))
+bar1.reversal_axis()
+bar1.render()
+
+bar2 = Bar()
+bar2.add_xaxis(["中国", "美国", "英国"])
+bar2.add_yaxis("GDP", [50, 50, 50], label_opts=LabelOpts(position="right"))
+bar2.reversal_axis()
+bar2.render()
+
+bar3 = Bar()
+bar3.add_xaxis(["中国", "美国", "英国"])
+bar3.add_yaxis("GDP", [70, 60, 60], label_opts=LabelOpts(position="right"))
+bar3.reversal_axis()
+bar3.render()
+
+# 构建时间线对象
+timeline = Timeline({"theme": ThemeType.LIGHT})
+
+# 在时间线内部添加柱状图对象
+timeline.add(bar1, "点1")
+timeline.add(bar2, "点2")
+timeline.add(bar3, "点3")
+
+# 自动播放设置
+timeline.add_schema(
+    play_interval=1000,
+    is_timeline_show=True,
+    is_auto_play=True,
+    is_loop_play=True
+)
+
+# 主体设置
+
+# 绘图是用时间线对象绘图，而不是bar对象
+timeline.render("基础时间线柱状图.html")
 
             </code>
         </pre>
