--- a/notes/python/0065.html
+++ b/notes/python/0065.html
@@ -34,16 +34,22 @@
         </div>
         <hr>
         <!-- 正文 -->
-        <h1 class="code">01 字面量.py</h1>
+        <h1 class="code">myModle1.py</h1>
         <pre>
             <code class="code">
-666
-13.14
-"黑马程序员"
+__all__ = ["test_a"]  # 限制import*导入的功能
 
-print(666)
-print(13.14)
-print("黑马程序员")
+def test_a(a, b):
+    print(a + b)
+
+def test_b(a, b):
+    print(a - b)
+
+# __name__是内置变量，在这个文件中运行时__name__变成"__main__"
+# __name__被别的文件调用时不是"__main__"
+if __name__ == '__main__':
+    print("文件内测试")
+    # test(1, 2)
 
             </code>
         </pre>
