--- a/notes/python/0066.html
+++ b/notes/python/0066.html
@@ -34,16 +34,12 @@
         </div>
         <hr>
         <!-- 正文 -->
-        <h1 class="code">01 字面量.py</h1>
+        <h1 class="code">myModle2.py</h1>
         <pre>
             <code class="code">
-666
-13.14
-"黑马程序员"
 
-print(666)
-print(13.14)
-print("黑马程序员")
+def test(a, b):
+    print(a - b)
 
             </code>
         </pre>
