--- a/notes/python/0074.html
+++ b/notes/python/0074.html
@@ -34,16 +34,35 @@
         </div>
         <hr>
         <!-- 正文 -->
-        <h1 class="code">01 字面量.py</h1>
+        <h1 class="code">09 复写和使用父类成员.py</h1>
         <pre>
             <code class="code">
-666
-13.14
-"黑马程序员"
+class Phone:
+    IMEI = None  # 序列号
+    producer = "ITCAST"  # 厂商
 
-print(666)
-print(13.14)
-print("黑马程序员")
+    def call_by_5g(self):
+        print("使用5g网络进行通话")
+
+
+# 定义子类，复写父类成员
+class MyPhone(Phone):
+    producer = "ITHEIMA"  # 复写父类的成员属性
+
+    def call_by_5g(self):
+        print("开启CPU单核模式...")
+        # 方式1
+        Phone.call_by_5g(self)  # 必须加上self
+        print(f"父类的厂商是：{Phone.producer}")
+        # 方式2
+        super().call_by_5g()
+        print(f"父类的厂商是：{super().producer}")
+
+
+phone = MyPhone()
+phone.call_by_5g()
+print(phone.producer)
+# 在子类中，调用父类成员
 
             </code>
         </pre>
