--- a/notes/python/0075.html
+++ b/notes/python/0075.html
@@ -34,16 +34,46 @@
         </div>
         <hr>
         <!-- 正文 -->
-        <h1 class="code">01 字面量.py</h1>
+        <h1 class="code">10 类型注解.py</h1>
         <pre>
             <code class="code">
-666
-13.14
-"黑马程序员"
+"""
+演示变量的类型注解
+"""
 
-print(666)
-print(13.14)
-print("黑马程序员")
+# 基础数据类型注解
+import json
+import random
+
+var_a: int = 10
+var_2: str = "itheima"
+var_3: bool = True
+# 类对象类型注解
+class Student:
+    pass
+
+stu: Student = Student()
+
+# 基础容器类型注解
+my_list: list = [1, 2, 3]
+my_tuple: tuple = (1, 2, 3)
+my_dict: dict = {"itheima": 666}
+
+# 容器类型详细注解
+my_list: list[int] = [1, 2, 3]
+my_tuple: tuple[int, str, bool] = (1, "itheima", True)
+my_dict: dict[str, int] = {"itheima": 666}
+
+# 在注释中进行类型注解
+var_1 = random.randint(1, 10)  # type: int
+var_2 = json.loads('{"name": "张三"}')  # type: dict[str, str]
+def func():
+    return 10
+var_3 = func()  # type: int
+
+# 类型注解的限制
+var_4: int = "itheima"
+var_5: str = 123
 
             </code>
         </pre>
