--- a/notes/python/0076.html
+++ b/notes/python/0076.html
@@ -34,16 +34,22 @@
         </div>
         <hr>
         <!-- 正文 -->
-        <h1 class="code">01 字面量.py</h1>
+        <h1 class="code">11 函数和方法的类型注解.py</h1>
         <pre>
             <code class="code">
-666
-13.14
-"黑马程序员"
+"""
+演示对函数(方法)进行类型注解
+"""
 
-print(666)
-print(13.14)
-print("黑马程序员")
+# 对形参进行类型注解
+def add(x: int, y: int):
+    return x + y
+
+# 对返回值进行类型注解
+def func(data: list) -&gt; list:  # 类似于lambda表达式的返回值类型定义
+    return data
+
+print(func(1))
 
             </code>
         </pre>
