--- a/notes/python/0068.html
+++ b/notes/python/0068.html
@@ -22,7 +22,7 @@
                 </a>
             </div>
             <div class="class1">
-                <a href="https://darkstarlan.github.io/notes/cpp.html">
+                <a href="https://darkstarlan.github.io/notes/python.html">
                     <button class="right">返回目录</button>
                 </a>
             </div>
