--- a/notes/java/0002.html
+++ b/notes/java/0002.html
@@ -34,26 +34,24 @@
         </div>
         <hr>
         <!-- 正文 -->
-        <h1 class="code">Java_01.java</h1>
+        <h1 class="code">Java_02.java</h1>
         <pre>
             <code class="code">
 //算术运算符
 package com.darkstarlan.demo01;
 
-public class Java_01 {
+public class Java_02 {
+    //1.整数参与计算，结果只能得到整数
+    //2.小数参与计算，结果有可能不精确
     public static void main(String[] args) {
-        //+
-        System.out.println(3 + 2);
-        //-
-        System.out.println(5 - 1);
-        /        System.out.println(7 * 9);
+        //除法
+        System.out.println(10 / 2);
+        System.out.println(10 / 3);
+        System.out.println(10.0 / 3);
 
-        //如果在计算的时候有小数参与
-        //结果有可能不精确
-        System.out.println(1.1 + 1.1);
-        System.out.println(1.1 + 1.01);
-        System.out.println(1.1 - 1.01);
-        System.out.println(1.1 * 1.01);
+        //取模
+        System.out.println(10 % 2);
+        System.out.println(10 % 3);
     }
 }
 
