--- a/notes/java/0003.html
+++ b/notes/java/0003.html
@@ -34,26 +34,29 @@
         </div>
         <hr>
         <!-- 正文 -->
-        <h1 class="code">Java_01.java</h1>
+        <h1 class="code">Java_03.java</h1>
         <pre>
             <code class="code">
-//算术运算符
+//键盘录入
 package com.darkstarlan.demo01;
 
-public class Java_01 {
-    public static void main(String[] args) {
-        //+
-        System.out.println(3 + 2);
-        //-
-        System.out.println(5 - 1);
-        /        System.out.println(7 * 9);
+import java.util.Scanner;
 
-        //如果在计算的时候有小数参与
-        //结果有可能不精确
-        System.out.println(1.1 + 1.1);
-        System.out.println(1.1 + 1.01);
-        System.out.println(1.1 - 1.01);
-        System.out.println(1.1 * 1.01);
+public class Java_03 {
+    public static void main(String[] args) {
+        //键盘录入一个三位数，获取其中的个位，十位，百位
+
+        //1.键盘录入
+        Scanner sc = new Scanner(System.in);
+        System.out.println("请输入一个三位数");
+        int number = sc.nextInt();
+
+        int one = number % 10;
+        int two = number / 10 % 10;
+        int three = number / 100 % 10;
+        System.out.println(one);
+        System.out.println(two);
+        System.out.println(three);
     }
 }
 
