--- a/notes/java/0004.html
+++ b/notes/java/0004.html
@@ -34,29 +34,20 @@
         </div>
         <hr>
         <!-- 正文 -->
-        <h1 class="code">Java_01.java</h1>
+        <h1 class="code">Java_04.java</h1>
         <pre>
             <code class="code">
-//算术运算符
+//显示类型转换和字符串拼接
 package com.darkstarlan.demo01;
 
-public class Java_01 {
+public class Java_04 {
     public static void main(String[] args) {
-        //+
-        System.out.println(3 + 2);
-        //-
-        System.out.println(5 - 1);
-        /        System.out.println(7 * 9);
-
-        //如果在计算的时候有小数参与
-        //结果有可能不精确
-        System.out.println(1.1 + 1.1);
-        System.out.println(1.1 + 1.01);
-        System.out.println(1.1 - 1.01);
-        System.out.println(1.1 * 1.01);
+        byte b1 = 100;
+        byte b2 = 100;
+        byte result = (byte)(b1 + b2);
+        System.out.println("结果：" + result);  //-56
     }
 }
-
             </code>
         </pre>
     </body>
