--- a/notes/java/0005.html
+++ b/notes/java/0005.html
@@ -34,26 +34,17 @@
         </div>
         <hr>
         <!-- 正文 -->
-        <h1 class="code">Java_01.java</h1>
+        <h1 class="code">Java_05.java</h1>
         <pre>
             <code class="code">
-//算术运算符
+//隐式类型转换
 package com.darkstarlan.demo01;
 
-public class Java_01 {
+public class Java_05 {
     public static void main(String[] args) {
-        //+
-        System.out.println(3 + 2);
-        //-
-        System.out.println(5 - 1);
-        /        System.out.println(7 * 9);
-
-        //如果在计算的时候有小数参与
-        //结果有可能不精确
-        System.out.println(1.1 + 1.1);
-        System.out.println(1.1 + 1.01);
-        System.out.println(1.1 - 1.01);
-        System.out.println(1.1 * 1.01);
+        char c = 'a';
+        int result = c + 0;
+        System.out.println(result);  //97
     }
 }
 
