--- a/notes/java/0007.html
+++ b/notes/java/0007.html
@@ -34,26 +34,25 @@
         </div>
         <hr>
         <!-- 正文 -->
-        <h1 class="code">Java_01.java</h1>
+        <h1 class="code">Java_07.java</h1>
         <pre>
             <code class="code">
-//算术运算符
+//赋值运算符
 package com.darkstarlan.demo01;
 
-public class Java_01 {
+public class Java_07 {
     public static void main(String[] args) {
-        //+
-        System.out.println(3 + 2);
-        //-
-        System.out.println(5 - 1);
-        /        System.out.println(7 * 9);
+        int a = 10;
+        int b = 20;
+        a += b;  //a = (int)(a + b)
+        a -= b;  //a = (int)(a - b)
+        System.out.println(a);
+        System.out.println(b);
 
-        //如果在计算的时候有小数参与
-        //结果有可能不精确
-        System.out.println(1.1 + 1.1);
-        System.out.println(1.1 + 1.01);
-        System.out.println(1.1 - 1.01);
-        System.out.println(1.1 * 1.01);
+        //+=, -=, *=, %=底层都隐藏了一个强制类型转换
+        short s = 1;
+        s += 1;  //s = (short)(s + 1)
+        System.out.println(s);
     }
 }
 
