--- a/notes/java/0009.html
+++ b/notes/java/0009.html
@@ -34,26 +34,36 @@
         </div>
         <hr>
         <!-- 正文 -->
-        <h1 class="code">Java_01.java</h1>
+        <h1 class="code">Java_09.java</h1>
         <pre>
             <code class="code">
-//算术运算符
+//逻辑运算符
 package com.darkstarlan.demo01;
 
-public class Java_01 {
+public class Java_09 {
     public static void main(String[] args) {
-        //+
-        System.out.println(3 + 2);
-        //-
-        System.out.println(5 - 1);
-        /        System.out.println(7 * 9);
+        //不能短路求值(C++)
+        // & 与
+        System.out.println(true & true);
+        System.out.println(false & false);
+        System.out.println(true & false);
+        System.out.println(false & true);
 
-        //如果在计算的时候有小数参与
-        //结果有可能不精确
-        System.out.println(1.1 + 1.1);
-        System.out.println(1.1 + 1.01);
-        System.out.println(1.1 - 1.01);
-        System.out.println(1.1 * 1.01);
+        // | 或
+        System.out.println(true | true);
+        System.out.println(false | false);
+        System.out.println(true | false);
+        System.out.println(false | true);
+
+        // ^ 异或
+        System.out.println(true ^ true);
+        System.out.println(false ^ false);
+        System.out.println(true ^ false);
+        System.out.println(false ^ true);
+
+        // ! 非
+        System.out.println(!false);
+        System.out.println(!true);
     }
 }
 
