--- a/notes/java/0010.html
+++ b/notes/java/0010.html
@@ -34,26 +34,32 @@
         </div>
         <hr>
         <!-- 正文 -->
-        <h1 class="code">Java_01.java</h1>
+        <h1 class="code">Java_10.java</h1>
         <pre>
             <code class="code">
-//算术运算符
+//短路逻辑运算符
 package com.darkstarlan.demo01;
 
-public class Java_01 {
+public class Java_10 {
     public static void main(String[] args) {
-        //+
-        System.out.println(3 + 2);
-        //-
-        System.out.println(5 - 1);
-        /        System.out.println(7 * 9);
+        // && 短路与
+        System.out.println(true && true);
+        System.out.println(false && false);
+        System.out.println(false && true);
+        System.out.println(true && false);
 
-        //如果在计算的时候有小数参与
-        //结果有可能不精确
-        System.out.println(1.1 + 1.1);
-        System.out.println(1.1 + 1.01);
-        System.out.println(1.1 - 1.01);
-        System.out.println(1.1 * 1.01);
+        // || 短路或
+        System.out.println(true || true);
+        System.out.println(false || false);
+        System.out.println(false || true);
+        System.out.println(true || false);
+
+        int a = 10;
+        int b = 10;
+        boolean result = ++a &lt; 5 && ++b &lt; 5;
+        System.out.println(result);
+        System.out.println(a);
+        System.out.println(b);
     }
 }
 
