--- a/notes/java/0011.html
+++ b/notes/java/0011.html
@@ -34,26 +34,20 @@
         </div>
         <hr>
         <!-- 正文 -->
-        <h1 class="code">Java_01.java</h1>
+        <h1 class="code">Java_11.java</h1>
         <pre>
             <code class="code">
-//算术运算符
+//三元运算符
 package com.darkstarlan.demo01;
 
-public class Java_01 {
+public class Java_11 {
     public static void main(String[] args) {
-        //+
-        System.out.println(3 + 2);
-        //-
-        System.out.println(5 - 1);
-        /        System.out.println(7 * 9);
+        int number1 = 10;
+        int number2 = 20;
 
-        //如果在计算的时候有小数参与
-        //结果有可能不精确
-        System.out.println(1.1 + 1.1);
-        System.out.println(1.1 + 1.01);
-        System.out.println(1.1 - 1.01);
-        System.out.println(1.1 * 1.01);
+        int max = number1 &gt; number2 ? number1 : number2;
+        System.out.println(max);
+        System.out.println(number1 &gt; number2 ? number1 : number2);
     }
 }
 
