--- a/notes/java/0012.html
+++ b/notes/java/0012.html
@@ -34,26 +34,18 @@
         </div>
         <hr>
         <!-- 正文 -->
-        <h1 class="code">Java_01.java</h1>
+        <h1 class="code">Java_12.java</h1>
         <pre>
             <code class="code">
-//算术运算符
+//流程控制语句 顺序结构
 package com.darkstarlan.demo01;
 
-public class Java_01 {
+public class Java_12 {
     public static void main(String[] args) {
-        //+
-        System.out.println(3 + 2);
-        //-
-        System.out.println(5 - 1);
-        /        System.out.println(7 * 9);
-
-        //如果在计算的时候有小数参与
-        //结果有可能不精确
-        System.out.println(1.1 + 1.1);
-        System.out.println(1.1 + 1.01);
-        System.out.println(1.1 - 1.01);
-        System.out.println(1.1 * 1.01);
+        System.out.println("one");
+        System.out.println("two");
+        System.out.println("three");
+        System.out.println("four");
     }
 }
 
