--- a/notes/java/0016.html
+++ b/notes/java/0016.html
@@ -34,26 +34,20 @@
         </div>
         <hr>
         <!-- 正文 -->
-        <h1 class="code">Java_01.java</h1>
+        <h1 class="code">Java_16.java</h1>
         <pre>
             <code class="code">
-//算术运算符
+//while循环
 package com.darkstarlan.demo01;
 
-public class Java_01 {
+public class Java_16 {
     public static void main(String[] args) {
-        //+
-        System.out.println(3 + 2);
-        //-
-        System.out.println(5 - 1);
-        /        System.out.println(7 * 9);
-
-        //如果在计算的时候有小数参与
-        //结果有可能不精确
-        System.out.println(1.1 + 1.1);
-        System.out.println(1.1 + 1.01);
-        System.out.println(1.1 - 1.01);
-        System.out.println(1.1 * 1.01);
+        int i = 0;
+        while(true){
+            if(++i == 5) continue;
+            System.out.println(i);
+            if(i &gt;= 10) break;
+        }
     }
 }
 
